complet navbar landing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,73 @@
   <body>
 
 
+    <header class="">
 
+     <div class="container">
+
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  سرمایه گذاری
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">فارابی  </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">شعبه ها  </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"> اخبار ها و تازه ها </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">بورس کالا و انرژی   </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"> مسئولیت اجتماعی  </a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <button class="btn btn-outline-success me-4"  type="submit">فارابیکسو</button>
+              <button class="btn btn-success" type="submit">ورود به فارابی زون</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+     </div>
+
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+    <div>
+      <i class="bi bi-telegram"></i>
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-linkedin"></i>
+      <i class="bi bi-twitter"></i>
+    </div>
 
 
 
