complat part after navbar landing pag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
 
-    <header class="">
+    <header class=" mb-5">
 
      <div class="container">
 
@@ -69,6 +69,39 @@
      </div>
 
     </header>
+
+
+
+
+    <section class="container">
+      <div class="row">
+
+
+
+        <div class="col-md-6">
+
+          <h1 class="text-success mb-5"> فلز پرتفوی آهنین بورس!</h1>
+          <p class="mb-5">
+            با خرید صندوق فلز فارابی (ETF) بهترین نمادهای صنعت فلزات را به پرتفوی خود اضافه کنید.
+        </p>
+          <button class="btn btn-success mb-3">شروع سرمایه گذاری </button>
+          <button class="btn btn-outline-success mb-3">مشاوره انلاین</button>
+          <p class="fw-light" style="font-size: small;">
+            <span><i class="bi bi-exclamation-circle"></i></span>
+            با جستجوی نماد «فلزفارابی» در کارگزاری خود نیز، می‌توانید از 100 هزار تومان تا بی‌نهایت سرمایه‌گذاری کنید.
+            
+          </p>
+        </div>
+
+        <div class="col-md-6">
+<img src="./imags/mand.png" alt="">
+        </div>
+
+
+      
+
+      </div>
+    </section>
 
 
 
