part akhr icon ha soshal media zadeh shod

--- a/index.html
+++ b/index.html
@@ -342,17 +342,64 @@
 
 <footer>
 
-  <section>
+  <section class="container">
+<div class="row">
+
+  <div class="col-md-3" >
+
+  </div>
+  <div class="col-md-3" >
+
+  </div>
+  <div class="col-md-3" >
+
+  </div>
+  <div class="col-md-3" >
+
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
 
   </section>
+
 </footer>
-    
-    <div>
-      <i class="bi bi-telegram"></i>
-      <i class="bi bi-instagram"></i>
-      <i class="bi bi-linkedin"></i>
-      <i class="bi bi-twitter"></i>
+
+
+
+
+<section  style="background-color: #1b3e2e;
+;  color: #ffffffb3;">
+
+<div class="container p-3 ">
+  <div class="row align-items-center">
+    <div class="col-md-5">
+<p>
+  © تمامی حقوق برای کارگزاری فارابی محفوظ است
+  </p>
     </div>
+    <div class="col-md-3 ms-auto">
+      <div>
+        <i class="bi bi-telegram me-4 fs-5"></i>
+        <i class="bi bi-instagram me-4 fs-5"></i>
+        <i class="bi bi-linkedin me-4 fs-5"></i>
+        <i class="bi bi-twitter fs-5"></i>
+      </div>
+
+    </div>
+  </div>
+</section>
+</div>
+   
 
     <br>
     <br>
