add part footer landing page in project

--- a/index.html
+++ b/index.html
@@ -340,21 +340,41 @@
 
 
 
-<footer>
+<footer class="mt-5 " style=" height: 190px; background-color: #265841;">
 
-  <section class="container">
+  <section class="container p-4">
 <div class="row">
 
   <div class="col-md-3" >
+<a href="#"><img src="./imags/لوگو فارابی.jpeg"  style="width: 170px; height: 50px;"  alt=""><br>
+</a>
+  <a href="#" class="pb-5" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a><br>
+  <a href="#" class="mb-3" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a><br>
+  <a href="#" class="mb-3" style="text-decoration: none; color: #ffffffb3"> شماره حساب های شرکت </a><br>
+  
 
   </div>
   <div class="col-md-3" >
+    <p style="color: #ffffffb3">راهکارهای سرمایه گذاری</p>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> صندوق سهامی</a><br>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3">صندوق درآمد ثابت  </a><br>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> کارت بانکی  نکسو</a><br>
+
+    
+  </div>
+  <div class="col-md-3" >
+    <p style="color: #ffffffb3">  خدمات فارابی </p>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3">کد بورسی و سجام</a><br>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> شعب و دفاتر پیشخوان</a><br>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> سامانه مشتریان (گردش حساب)</a><br>
+
 
   </div>
   <div class="col-md-3" >
-
-  </div>
-  <div class="col-md-3" >
+    <p style="color: #ffffffb3">  ارتباط با فارابی</p>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> همکاری با فارابی</a><br>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> تماس با ما</a><br>
+    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> ثبت شکایات </a><br>
 
   </div>
 
