--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 
 
-<footer class="mt-5 " style=" height: 190px; background-color: #265841;">
+<footer class="mt-5 p-5 " style=" background-color: #265841;">
 
   <section class="container p-4">
 <div class="row">
@@ -407,7 +407,7 @@
   © تمامی حقوق برای کارگزاری فارابی محفوظ است
   </p>
     </div>
-    <div class="col-md-3 ms-auto">
+    <div class="col-md-3 ms-auto text-center">
       <div>
         <i class="bi bi-telegram me-4 fs-5"></i>
         <i class="bi bi-instagram me-4 fs-5"></i>
@@ -423,16 +423,7 @@
 
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
