camel kardan part soal haye motadavel

--- a/index.html
+++ b/index.html
@@ -302,13 +302,15 @@
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Accordion Item #1
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+                صندوق بخشی چیست؟  
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
             <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+             صندوق بخشی نوعی از صندوق‌های سرمایه‌گذاری سهامی است که بر صنعت یا بخش خاصی از بازار مانند فلزات، پتروشیمی و… تمرکز دارد. با توجه به این موضوع، در صورتی‌ که صنعت انتخابی در شرایط صعودی قرار گیرد، این صندوق پتانسیل رشد 
+                بالاتری دارد. علی‌رغم تمرکز بر یک بخش خاص از بازار، این صندوق‌ها اغلب با نگهداری سهام شرکت‌های مختلف
+                 از صنعت مورد نظر، سطحی از تنوع را فراهم می‌کنند.
             </div>
           </div>
         </div>
@@ -319,14 +321,130 @@
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Accordion Item #1
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne1" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+              صندوق فلز فارابی در چه دارایی‌هایی سرمایه‌گذاری می‌کند؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne1" class="accordion-collapse collapse show">
             <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              صندوق‌ سرمایه‌گذاری بخشی فلز فارابی با تمرکز بر صنعت جذاب فلزات اساسی فعالیت می‌کند. حداقل 70 درصد از دارایی‌های این صندوق به سرمایه‌گذاری در برترین سهام و حق‌‌تقدم شرکت‌های فعال در حوزه صنعت فلزات اختصاص می‌یابد و سایر منابع صرف سرمایه‌گذاری در دیگر صنایع، اوراق با درآمد ثابت و… می‌شود.
             </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="container mt-5">
+    <div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne2" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+              صندوق بخشی چه مزیت‌هایی دارد؟
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne2" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              از مزیت‌های صندوق‌های بخشی می‌توان به سرمایه‌گذاری متمرکز در یک بخش از بازار، پتانسیل بازدهی و نقدشوندگی بالا، بهره‌گیری از تحلیلگران متخصص صنایع خاص و انتخاب بهترین سهم‌های یک صنعت به‌خصوص اشاره کرد.            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="container mt-5">
+    <div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne3" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+              چرا صندوق فلز فارابی برای شما مناسب است؟
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne3" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              اگر به سرمایه‌گذاری در شرکت‌های حاضر در صنعت فلزات علاقه‌مند هستید، صندوق بخشی فلز فارابی بهترین گزینه برای شماست. در این صورت به‌جای بررسی 50 شرکت، بهترین سهم‌های این صنعت را با یک نماد به پرتفوی خود اضافه می‌کنید.            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="container mt-5">
+    <div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne4" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+              چطور می‌توانم در صندوق فلز فارابی سرمایه‌گذاری کنم؟
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne4" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              اگر به سرمایه‌گذاری در شرکت‌های حاضر در صنعت فلزات علاقه‌مند هستید، صندوق بخشی فلز فارابی بهترین گزینه برای شماست. در این صورت به‌جای بررسی 50 شرکت، بهترین سهم‌های این صنعت را با یک نماد به پرتفوی خود اضافه می‌کنید.            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="container mt-5">
+    <div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne5" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+
+              صندوق بخشی چه تفاوتی با صندوق سهامی دارد؟
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne5" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              صندوق بخشی نوعی صندوق سهامی است که بیشتر دارایی آن در سهام و حق‌تقدم سهام شرکت‌های یک صنعت خاص سرمایه‌گذاری می‌شود؛ بنابراین صندوق بخشی در موج‌های صعودی صنعت مورد نظر پتانسیل بالایی برای سوددهی دارد.            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="container mt-5">
+    <div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne6" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+
+              حداقل مبلغ سرمایه‌گذاری در صندوق فلز فارابی چقدر است؟
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne6" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              حداقل مبلغ سرمایه‌گذاری در صندوق بخشی فلز فارابی مانند سایر صندوق‌های قابل معامله (ETF) معادل 100 هزار تومان است.            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="container mt-5">
+    <div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne7" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+
+              صندوق بخشی فلز فارابی تحت نظارت کدام نهاد است؟
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne7" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              همه صندوق‌های سرمایه‌گذاری از جمله فلز فارابی، تحت نظارت سازمان بورس و اوراق بهادار فعالیت می‌کنند.            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="container mt-5">
+    <div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne8" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+
+              آیا برای سرمایه‌گذاری در صندوق فلز فارابی باید در کارگزاری فارابی حساب داشته باشم؟
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne8" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              خیر؛ واحدهای صندوق بخشی فلز فارابی با توجه به قابل‌معامله (ETF) بودن آن، از طریق سامانه معاملات آنلاین تمامی کارگزاری‌ها امکان‌پذیر است.            </div>
           </div>
         </div>
     </div>
@@ -421,9 +539,7 @@
 </div>
    
 
-    <br>
-    <br>
-    
+  
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
