delet br and drost kardan ta ye hady solat motadavel

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 صندوق بخشی چیست؟  
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse ">
             <div class="accordion-body">
              صندوق بخشی نوعی از صندوق‌های سرمایه‌گذاری سهامی است که بر صنعت یا بخش خاصی از بازار مانند فلزات، پتروشیمی و… تمرکز دارد. با توجه به این موضوع، در صورتی‌ که صنعت انتخابی در شرایط صعودی قرار گیرد، این صندوق پتانسیل رشد 
                 بالاتری دارد. علی‌رغم تمرکز بر یک بخش خاص از بازار، این صندوق‌ها اغلب با نگهداری سهام شرکت‌های مختلف
@@ -325,7 +325,7 @@
               صندوق فلز فارابی در چه دارایی‌هایی سرمایه‌گذاری می‌کند؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne1" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne1" class="accordion-collapse collapse ">
             <div class="accordion-body">
               صندوق‌ سرمایه‌گذاری بخشی فلز فارابی با تمرکز بر صنعت جذاب فلزات اساسی فعالیت می‌کند. حداقل 70 درصد از دارایی‌های این صندوق به سرمایه‌گذاری در برترین سهام و حق‌‌تقدم شرکت‌های فعال در حوزه صنعت فلزات اختصاص می‌یابد و سایر منابع صرف سرمایه‌گذاری در دیگر صنایع، اوراق با درآمد ثابت و… می‌شود.
             </div>
@@ -342,7 +342,7 @@
               صندوق بخشی چه مزیت‌هایی دارد؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne2" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne2" class="accordion-collapse collapse ">
             <div class="accordion-body">
               از مزیت‌های صندوق‌های بخشی می‌توان به سرمایه‌گذاری متمرکز در یک بخش از بازار، پتانسیل بازدهی و نقدشوندگی بالا، بهره‌گیری از تحلیلگران متخصص صنایع خاص و انتخاب بهترین سهم‌های یک صنعت به‌خصوص اشاره کرد.            </div>
           </div>
@@ -358,7 +358,7 @@
               چرا صندوق فلز فارابی برای شما مناسب است؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne3" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne3" class="accordion-collapse collapse ">
             <div class="accordion-body">
               اگر به سرمایه‌گذاری در شرکت‌های حاضر در صنعت فلزات علاقه‌مند هستید، صندوق بخشی فلز فارابی بهترین گزینه برای شماست. در این صورت به‌جای بررسی 50 شرکت، بهترین سهم‌های این صنعت را با یک نماد به پرتفوی خود اضافه می‌کنید.            </div>
           </div>
@@ -374,7 +374,7 @@
               چطور می‌توانم در صندوق فلز فارابی سرمایه‌گذاری کنم؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne4" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne4" class="accordion-collapse collapse ">
             <div class="accordion-body">
               اگر به سرمایه‌گذاری در شرکت‌های حاضر در صنعت فلزات علاقه‌مند هستید، صندوق بخشی فلز فارابی بهترین گزینه برای شماست. در این صورت به‌جای بررسی 50 شرکت، بهترین سهم‌های این صنعت را با یک نماد به پرتفوی خود اضافه می‌کنید.            </div>
           </div>
@@ -391,7 +391,7 @@
               صندوق بخشی چه تفاوتی با صندوق سهامی دارد؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne5" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne5" class="accordion-collapse collapse ">
             <div class="accordion-body">
               صندوق بخشی نوعی صندوق سهامی است که بیشتر دارایی آن در سهام و حق‌تقدم سهام شرکت‌های یک صنعت خاص سرمایه‌گذاری می‌شود؛ بنابراین صندوق بخشی در موج‌های صعودی صنعت مورد نظر پتانسیل بالایی برای سوددهی دارد.            </div>
           </div>
@@ -408,7 +408,7 @@
               حداقل مبلغ سرمایه‌گذاری در صندوق فلز فارابی چقدر است؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne6" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne6" class="accordion-collapse collapse ">
             <div class="accordion-body">
               حداقل مبلغ سرمایه‌گذاری در صندوق بخشی فلز فارابی مانند سایر صندوق‌های قابل معامله (ETF) معادل 100 هزار تومان است.            </div>
           </div>
@@ -425,7 +425,7 @@
               صندوق بخشی فلز فارابی تحت نظارت کدام نهاد است؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne7" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne7" class="accordion-collapse collapse ">
             <div class="accordion-body">
               همه صندوق‌های سرمایه‌گذاری از جمله فلز فارابی، تحت نظارت سازمان بورس و اوراق بهادار فعالیت می‌کنند.            </div>
           </div>
@@ -442,7 +442,7 @@
               آیا برای سرمایه‌گذاری در صندوق فلز فارابی باید در کارگزاری فارابی حساب داشته باشم؟
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne8" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseOne8" class="accordion-collapse collapse ">
             <div class="accordion-body">
               خیر؛ واحدهای صندوق بخشی فلز فارابی با توجه به قابل‌معامله (ETF) بودن آن، از طریق سامانه معاملات آنلاین تمامی کارگزاری‌ها امکان‌پذیر است.            </div>
           </div>
@@ -545,7 +545,25 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script>
-    <script src="./sandbox.js"></script>
+    >
+  
+  </script>
+    <script src="./sandbox.js">
+
+
+
+<!-- JavaScript سفارشی -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const accordionButtons = document.querySelectorAll('.accordion-button');
+
+      accordionButtons.forEach(button => {
+        button.addEventListener('click', function () {
+          const accordionItem = this.closest('.accordion-item');
+          accordionItem.classList.toggle('active'); // اضافه یا حذف کلاس active
+        });
+      });
+    });
+    </script>
   </body>
 </html>
