add coler in   sarmaye gozary and fix margin solt motadavel

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                     class="nav-link dropdown-toggle"
                     href="#"
                     role="button"
-                    data-bs-toggle="dropdown"
+                    data-bs-toggle="dropdown "
                     aria-expanded="false"
+                    style="color: black;"
                   >
                     سرمایه گذاری
                   </a>
@@ -297,7 +298,7 @@
     <p class="fw-bold fs-2 p-5 " >سوالات متداول</p>
   </div>
 
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -316,7 +317,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -333,7 +334,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -349,7 +350,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -365,7 +366,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -381,7 +382,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -398,7 +399,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -415,7 +416,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -432,7 +433,7 @@
         </div>
     </div>
   </section>
-  <section class="container mt-5">
+  <section class="container mt-3">
     <div>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
