fix nav bar positin in projekt

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="mb-5">
       <div class="container">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg bg-white  fixed-top container">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"
               ><img src="./imags/لوگو فارابی.jpeg" style="width: 150px" alt=""
@@ -99,7 +99,7 @@
       </div>
     </header>
 
-    <section class="container">
+    <section class="container pt-5">
       <div class="row">
         <div class="col-md-6">
           <h1 class="text-success mb-5">فلز پرتفوی آهنین بورس!</h1>
