add link arabixo and farabi  zon

--- a/index.html
+++ b/index.html
@@ -86,12 +86,9 @@
                 </li>
               </ul>
               <form class="d-flex" role="search">
-                <button class="btn btn-outline-success me-4" type="submit">
-                  فارابیکسو
-                </button>
-                <button class="btn btn-success" type="submit">
-                  ورود به فارابی زون
-                </button>
+                <a href="https://first.farabixo.com/login/auth/login" class="btn btn-outline-success me-4" type="submit">فارابیکسو</a> 
+                <a href="https://account.irfarabi.com/web/login?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallback%3Fresponse_type%3Dcode%26client_id%3Dxon-prod%26scope%3Dopenid%2520profile%2520offline_access%26state%3DQ-Hww8g35N5oVvOP3T3YK9GAWvm4W6g_ihSF-D8h3b0%253D%26redirect_uri%3Dhttps%253A%252F%252Fmy.irfarabi.com%252Flogin%252Foauth2%252Fcode%252Ffarabi%26nonce%3Dt2uZT-m_9WSgo995RxfFBYlhi4z0hiWxfI2aYuRHh_0%26referer%3Dhttps%253A%252F%252Fmy.irfarabi.com%252F" class="btn btn-outline-success me-4" type="submit">فارابی زون</a>
+                
               </form>
             </div>
           </div>
