fix witht end part faq

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 
 
-<section class="bg-light mt-5">
+<section class="bg-light p-5">
   <div class="container text-center ">
     <p class="fw-bold fs-2 p-5 " >سوالات متداول</p>
   </div>
@@ -456,7 +456,7 @@
 
 
 
-<footer class="mt-5 p-5 " style=" background-color: #265841;">
+<footer class="p-5 " style=" background-color: #265841;">
 
   <section class="container p-4">
 <div class="row">
