fix all pading and margin fag

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 
 
-<section class="bg-light p-5">
+<section class="bg-light p-5 mt-5">
   <div class="container text-center ">
     <p class="fw-bold fs-2 p-5 " >سوالات متداول</p>
   </div>
