--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 <div class="row">
 
   <div class="col-md-3" >
-<a href="#"><img src="./imags/لوگو فارابی.jpeg"  style="width: 170px; height: 50px;"  alt=""><br>
+<a href="#"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt=""><br>
 </a>
   <a href="#" class="pb-5" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a><br>
   <a href="#" class="mb-3" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a><br>
