add link next samaneye mobil samane moamaelat saham and

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </li>
               </ul>
               <form class="d-flex" role="search">
-                <a href="https://first.farabixo.com/login/auth/login" class="btn btn-outline-success me-4" type="submit">فارابیکسو</a> 
+                <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabixo.irfarabi.com%252Fauth%252Fcallback%26response_type%3Dcode%26scope%3Dime_api%2520proto_api%2520agent_api%2520sad_api%2520market_api%2520fund_api%2520tse_api%2520base_api%2520market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26state%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8rbteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login_type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="btn btn-outline-success me-4" type="submit">فارابیکسو</a> 
                 <a href="https://account.irfarabi.com/web/login?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallback%3Fresponse_type%3Dcode%26client_id%3Dxon-prod%26scope%3Dopenid%2520profile%2520offline_access%26state%3DQ-Hww8g35N5oVvOP3T3YK9GAWvm4W6g_ihSF-D8h3b0%253D%26redirect_uri%3Dhttps%253A%252F%252Fmy.irfarabi.com%252Flogin%252Foauth2%252Fcode%252Ffarabi%26nonce%3Dt2uZT-m_9WSgo995RxfFBYlhi4z0hiWxfI2aYuRHh_0%26referer%3Dhttps%253A%252F%252Fmy.irfarabi.com%252F" 
                 class="btn btn-success me-4" type="submit">ورود به فارابی زون</a>
                 
