fix icon darbarey farabi

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
    <section class="container mt-5 ">
     <div class="row text-center">
       <div class="col">
-<img src="./imags/لوگوی-کارگزاری-فارابی.png" class="w-25 h-75" alt="">
+<img src="./imags/لوگوی-کارگزاری-فارابی.png" class="w-25" alt="">
       </div>
       
     </div>
