--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>صندوق فلز - کارگزاری فارابی</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+<link rel="manifest" href="./favicon/android-chrome-192x192.png">
+
+
+
+
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
@@ -17,9 +26,9 @@
     <link rel="stylesheet" href="./styel.css" />
   </head>
   <body>
-    <header class="mb-5">
+    <header class="mb-5 position-sticky top-0 shadow-sm hed-nav">
       <div class="container">
-        <nav class="navbar navbar-expand-lg bg-white  fixed-top container">
+        <nav class="navbar navbar-expand-lg bg-white ">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"
               ><img src="./imags/لوگو فارابی.jpeg" style="width: 150px" alt=""
@@ -291,7 +300,7 @@
 
 
 
-<section class="bg-light p-5 mt-5">
+<section class="bg-light p-5 mt-5 faq">
   <div class="container text-center ">
     <p class="fw-bold fs-2 p-5 " >سوالات متداول</p>
   </div>
