fix and coplat footer

--- a/index.html
+++ b/index.html
@@ -466,61 +466,48 @@
 
 
 
+
 <footer class="p-5 " style=" background-color: #265841;">
 
   <section class="container p-4">
 <div class="row">
 
   <div class="col-md-3" >
-<a href="#"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt=""><br>
+<a  class="pb-4 d-block" href="#"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt="">
 </a>
-  <a href="#" class="pb-5" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a><br>
-  <a href="#" class="mb-3" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a><br>
-  <a href="#" class="mb-3" style="text-decoration: none; color: #ffffffb3"> شماره حساب های شرکت </a><br>
+  <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a>
+  <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a>
+  <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> شماره حساب های شرکت </a>
   
 
   </div>
   <div class="col-md-3" >
-    <p style="color: #ffffffb3">راهکارهای سرمایه گذاری</p>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> صندوق سهامی</a><br>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3">صندوق درآمد ثابت  </a><br>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> کارت بانکی  نکسو</a><br>
+    <p class="pb-3 fs-5" style="color: #ffffffb3">راهکارهای سرمایه گذاری</p>
+    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> صندوق سهامی</a>
+    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">صندوق درآمد ثابت  </a>
+    <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> کارت بانکی  نکسو</a>
 
     
   </div>
   <div class="col-md-3" >
-    <p style="color: #ffffffb3">  خدمات فارابی </p>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3">کد بورسی و سجام</a><br>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> شعب و دفاتر پیشخوان</a><br>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> سامانه مشتریان (گردش حساب)</a><br>
+    <p class="pb-3 fs-5" style="color: #ffffffb3">  خدمات فارابی </p>
+    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">کد بورسی و سجام</a>
+    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> شعب و دفاتر پیشخوان</a>
+    <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> سامانه مشتریان (گردش حساب)</a>
 
 
   </div>
   <div class="col-md-3" >
-    <p style="color: #ffffffb3">  ارتباط با فارابی</p>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> همکاری با فارابی</a><br>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> تماس با ما</a><br>
-    <a href="#" class="" style="text-decoration: none; color: #ffffffb3"> ثبت شکایات </a><br>
+    <p class="pb-3 fs-5" style="color: #ffffffb3">  ارتباط با فارابی</p>
+    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> همکاری با فارابی</a>
+    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> تماس با ما</a>
+    <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> ثبت شکایات </a>
 
   </div>
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
   </section>
-
 </footer>
-
-
 
 
 <section  style="background-color: #1b3e2e;
