add icon and add button khared in project

--- a/index.html
+++ b/index.html
@@ -532,6 +532,19 @@
   </div>
 </section>
 </div>
+
+
+<section >
+  <div class="mb-5"">
+    <a href="#" class="poshtbany bg-success  p-4 rounded-circle "><img src="./imags/icone-poshtebany.svg" alt=""></a>
+  </div>
+  </section>
+
+  <section class="bg-light h-75">
+    <div class=" text-center mb-2 " style="height: 60px;" >
+      <a href="#" class="bg-success rounded-1 pe-5 ps-5 pt-3 pb-3 mt-5 text-white text-center" style="text-decoration: none;">خرید و شروع سرمایه گذاری</a>
+    </div>
+    </section>
    
 
   
