--- a/index.html
+++ b/index.html
@@ -541,8 +541,8 @@
   </section>
 
   <section class="bg-light h-75">
-    <div class=" text-center mb-2 " style="height: 60px;" >
-      <a href="#" class="bg-success rounded-1 pe-5 ps-5 pt-3 pb-3 mt-5 text-white text-center" style="text-decoration: none;">خرید و شروع سرمایه گذاری</a>
+    <div class=" text-center mb-2 " style="height: 100px;" >
+      <a href="#" class="bg-success rounded-1 pe-5 ps-5 pt-3 pb-3 mt-4 text-white text-center" style="text-decoration: none; display: inline-block;">خرید و شروع سرمایه گذاری</a>
     </div>
     </section>
    
